--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ h1 {letter-spacing: 2px}
 <!-- Header -->
 <header class="w3-panel w3-center w3-opacity" style="padding:16px 16px">
     <h1>OZDOFF</h1>
-  <h1 class="w3-xlarge">Ozgur's Database of Friends -- TEST</h1>
+  <h1 class="w3-xlarge">Ozgur's Database of Friends</h1>
 </header>
 
   
